[package]
name = "google-jwt-verify"
version = "0.3.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fuchsnj/google-jwt-verify"
license = "MIT/Apache-2.0"
description = """
A client to verify Google JSON web tokens
"""
edition = "2021"

[features]
default = ["blocking", "native-ssl"]
async = ["async-trait", "tokio"]
blocking = ["reqwest/blocking"]
native-ssl = ["reqwest/default", "dep:openssl"]
rust-ssl = ["reqwest/rustls-tls-native-roots", "dep:ring"]

[dependencies]
async-trait = {version = "~0.1", optional = true}
openssl = { version = "~0.10", optional = true }
base64 = "~0.22"
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"
reqwest = { version = "0.11.26", default-features = false }
http = "0.2" # reqwest 0.11.26 uses this version
cache_control = "~0.2"
tokio = {version = "1", optional = true}
ring = { version = "=0.17.8", optional = true }

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
futures = "0.3"
